--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -111,6 +111,22 @@ img {
   overflow: hidden;
 }
 
+.shape {
+  background-color: hsla(219, 33%, 32%, 0.5);
+  filter: blur(112px);
+  border-radius: 50%;
+}
+
+.shape_big {
+  width: 400px;
+  height: 400px;
+}
+
+.shape_small {
+  width: 300px;
+  height: 300px;
+}
+
 /* TODO =============== HEADER & NAV =============== */
 .header {
   width: 100%;
@@ -210,12 +226,144 @@ img {
 }
 
 /* * Change background header */
+.scroll-header {
+  border-radius: 0 0 1rem 1rem;
+  background-color: var(--body-color);
+  box-shadow: 0 2px 4px hsla(0, 0%, 1%, 1);
+}
 
 /* * Active link */
 
 /* TODO =============== HOME =============== */
+.home {
+  position: relative;
+  overflow: hidden;
+}
+
+.home_container {
+  position: relative;
+  padding-top: 4rem;
+  row-gap: 3rem;
+}
+
+.home_data {
+  text-align: center;
+}
+
+.home_title {
+  font-size: var(--h1-font-size);
+  margin-bottom: 1rem;
+}
+
+.home_subtitle {
+  font-size: var(--h3-font-size);
+  margin-bottom: 0.25rem;
+}
+
+.home_elec {
+  font-size: var(--small-font-size);
+  font-weight: 400;
+  color: var(--text-color);
+  display: inline-flex;
+  align-items: center;
+  column-gap: 0.25rem;
+}
+
+.home_elec i {
+  color: var(--first-color);
+}
+
+.home_img {
+  width: 280px;
+  justify-self: center;
+}
+
+.home_car {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 4rem;
+  margin-bottom: 2rem;
+}
+
+.home_car-name {
+  font-size: 0.625rem;
+  font-weight: 400;
+  color: var(--text-color-light);
+}
+
+.home_car-data {
+  text-align: center;
+}
+
+.home_car-number {
+  font-size: var(--h2-font-size);
+  font-weight: var(--font-medium);
+  margin-bottom: 0.25rem;
+}
+
+.home_car-icon {
+  background-color: var(--container-color);
+  border-radius: 50%;
+  padding: 0.376rem;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.875rem;
+  margin-bottom: 0.75rem;
+}
+
+.home_button {
+  position: relative;
+  border: 2px solid hsl(158, 89%, 30%);
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-self: center;
+  font-size: var(--small-font-size);
+  color: var(--white-color);
+  font-weight: var(--font-medium);
+}
+
+.home_button::before {
+  content: "";
+  border: 2px solid hsl(158, 98%, 43%);
+  width: 90px;
+  height: 90px;
+  position: absolute;
+  border-radius: 50%;
+  box-shadow: 0 0 15px hsl(158, 98%, 43%);
+  transition: 0.3s;
+  animation: button 3s infinite;
+}
+
+.home .shape_big,
+.home .shape_small {
+  position: absolute;
+}
+
+.home .shape_big {
+  left: -9rem;
+  top: -4rem;
+}
+
+.home .shape_small {
+  right: -10rem;
+  bottom: 3rem;
+}
 
 /* * Button animate */
+@keyframes button {
+  0% {
+    box-shadow: 0 0 12px hsl(158, 98%, 43%);
+  }
+  50% {
+    box-shadow: 0 0 24px hsl(158, 98%, 43%);
+  }
+}
 
 /* TODO =============== BUTTON =============== */
 
