--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -526,6 +526,72 @@ img {
 }
 
 /* TODO =============== FEATURES =============== */
+.features {
+  overflow: hidden;
+  position: relative;
+}
+
+.features_container {
+  padding-top: 2rem;
+  grid-template-columns: 285px;
+  justify-content: center;
+}
+
+.features_group {
+  display: grid;
+  position: relative;
+  z-index: 10;
+}
+
+.features_img {
+  width: 150px;
+  justify-self: center;
+}
+
+.features_card {
+  width: 112px;
+  background-color: hsla(0, 0%, 100%, 0.1);
+  backdrop-filter: blur(16px);
+  border-radius: 1.25rem;
+  padding: 0.75rem 2rem;
+  text-align: center;
+  color: var(--title-color);
+  position: absolute;
+}
+
+.features_card-1 {
+  top: 4rem;
+  left: 1.5rem;
+}
+
+.features_card-2 {
+  top: 8rem;
+  right: 1rem;
+}
+
+.features_card-3 {
+  left: 1.5rem;
+  bottom: 2rem;
+}
+
+.features_card-title {
+  font-size: var(--h3-font-size);
+  margin-bottom: 0.25rem;
+}
+
+.features_card-description {
+  font-size: var(--small-font-size);
+}
+
+.features_map {
+  max-width: initial;
+  width: 450px;
+  position: absolute;
+  top: 8rem;
+  left: -3rem;
+  margin: auto;
+  transform: rotate(-22deg);
+}
 
 /* TODO =============== FEATURED =============== */
 
