--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -594,8 +594,124 @@ img {
 }
 
 /* TODO =============== FEATURED =============== */
+.featured_container {
+  padding-top: 1rem;
+}
+
+.featured_filters {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  column-gap: 1rem;
+  margin-bottom: 3.5rem;
+}
+
+.featured_item {
+  width: 48px;
+  height: 48px;
+  border: none;
+  outline: none;
+  padding: 0.75rem;
+  border-radius: 0.75rem;
+  background-color: var(--container-color);
+  color: var(--white-color);
+  font-size: var(--normal-font-size);
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.featured_item img {
+  width: 1.5rem;
+}
+
+.featured_item span,
+.featured_item img {
+  opacity: 0.3;
+  transition: 0.3s;
+}
+
+.featured_item:hover {
+  background-color: var(--first-color);
+}
+
+.featured_item:hover span,
+.featured_item:hover img {
+  opacity: 1;
+}
+
+.featured_content {
+  grid-template-columns: 228px;
+  row-gap: 2.5rem;
+  justify-content: center;
+}
+
+.featured_card {
+  position: relative;
+  background-color: var(--container-color);
+  padding: 2rem 1.5rem 1.5rem;
+  border-radius: 1rem;
+}
+
+.featured_card .shape_smaller {
+  position: absolute;
+  inset: 0;
+  margin: auto;
+}
+
+.featured_title,
+.featured_subtitle,
+.featured_img {
+  position: relative;
+}
+.featured_title {
+  font-size: var(--h2-font-size);
+  margin-bottom: 0.25rem;
+}
+
+.featured_subtitle {
+  font-size: var(--normal-font-size);
+  color: var(--text-color);
+  font-weight: var(--font-semi-medium);
+}
+
+.featured_img {
+  width: 180px;
+  margin: 1.5rem 0;
+  transition: 0.3s;
+}
+
+.featured_price {
+  font-size: var(--h3-font-size);
+}
+
+.featured_button {
+  border: none;
+  outline: none;
+  padding: 0.75rem 1rem;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  border-radius: 1rem 0 1rem 0;
+  cursor: pointer;
+}
+
+.featured_button i {
+  font-size: 1.25rem;
+}
+
+.featured_card:hover .featured_img {
+  transform: translateX(-0.25rem);
+}
 
 /* * Active link featured */
+.active-featured {
+  background-color: var(--first-color);
+}
+
+.active-featured span,
+.active-featured img {
+  opacity: 1;
+}
 
 /* TODO =============== OFFER =============== */
 
